--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -3,17 +3,20 @@ services:
     image: mongo
     restart: always
     ports:
-      - "${DB_PORT}:${DB_PORT}"
+      - 27017:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: "${DB_USER}"
-      MONGO_INITDB_ROOT_PASSWORD: "${DB_PASSWORD}"
+      MONGO_INITDB_DATABASE: "${MONGO_INITDB_DATABASE}"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_INITDB_ROOT_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_INITDB_ROOT_PASSWORD}"
+    volumes:
+      - ./docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   mongo-express:
     image: mongo-express
     restart: always
     ports:
-      - "${DB_UI_PORT}:${DB_UI_PORT}"
+      - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: "${DB_UI_USER}"
-      ME_CONFIG_MONGODB_ADMINPASSWORD: "${DB_UI_PASSWORD}"
-      ME_CONFIG_MONGODB_URL: "${DB_URL}"
+      ME_CONFIG_MONGODB_ADMINUSERNAME: "${ME_CONFIG_MONGODB_ADMINUSERNAME}"
+      ME_CONFIG_MONGODB_ADMINPASSWORD: "${ME_CONFIG_MONGODB_ADMINPASSWORD}"
+      ME_CONFIG_MONGODB_URL: "${ME_CONFIG_MONGODB_URL}"
