--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "container": "docker compose -f ./infra/compose.yaml --env-file ./.env.local up -d ",
+    "stop:container": "docker compose -f ./infra/compose.yaml --env-file ./.env.local down "
   },
   "dependencies": {
+    "mongoose": "^7.6.4",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18"
