--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -20,3 +20,13 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: "${ME_CONFIG_MONGODB_ADMINUSERNAME}"
       ME_CONFIG_MONGODB_ADMINPASSWORD: "${ME_CONFIG_MONGODB_ADMINPASSWORD}"
       ME_CONFIG_MONGODB_URL: "${ME_CONFIG_MONGODB_URL}"
+
+  app:
+    build:
+      context: ..
+      dockerfile: infra/Dockerfile
+    image: luisgustavooliveira/node-next-aplication:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - ../:/app
