--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -26,6 +26,10 @@ services:
       context: ..
       dockerfile: infra/Dockerfile
     image: luisgustavooliveira/node-next-aplication:latest
+    environment:
+      MONGO_INITDB_DATABASE: "${MONGO_INITDB_DATABASE}"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_INITDB_ROOT_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_INITDB_ROOT_PASSWORD}"
     ports:
       - "3000:3000"
     volumes:
